--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,5 +6,8 @@
     "windows":{
         "command": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe"
     },
+    "osx":{
+        "command": "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
+    },
     "args": ["${file}"]
 }
